--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ https://www.facebook.com/LearnEnglishSimply/
  তুমি শুনেছো বুঝার চেষ্টা করেছো। ইংরেজি শিখার ক্ষেত্রেও একই পদ্ধতি এপ্লাই করবে। তাছাড়া 
  একদিন বা এক সপ্তাহে তুমি বাংলা শিখোনি। ইংরেজিও একদিন, এক সপ্তাহে শিখবে না। এইটার সাথে লেগে থাকবে।
  প্রাকটিস করবে। বন্ধুদের টিটকারি উপেক্ষা করে তোমার কাজ তুমি চালিয়ে যাও। তাহলে একসময় ইংরেজি বলার বুঝার কনফিডেন্স চলে আসবে।
- <b>copied by jhankar mahbub brother.</b>
+ <h1>copied by jhankar mahbub brother.</h1>
  </span>
 
 
