--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@ aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle 
 <br/><br/>
 <div class="row">
 <div class="col-lg-8 col-md-12 col-lg-12">
+	<center><a>গল্পে গল্পে তাহকিক শিখি</a></center>
+	BLOG Will COME SOON.
+	
+</div>
+<div class="row">
+<div class="col-lg-8 col-md-12 col-lg-12">
 <div style="margin:40px">
 <h4 style="color:blue">2019 সালে আমি যে 5 টি বই পড়েছি</h4><br/>
 <h3>2019 সালে আমি কিছু অসাধারণ বই পড়েছি। অনেক অনেক জিনিস শিখেছি। সেখান থেকে অনেক 
