--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
 .contain{padding:6%}
 
 body{margin:25px}
-.home{padding:10px margin:5px}
+.home{padding:10px;margin:5px}
 .color{color:black;    margin: 20px;
     padding: 10px;font-weight:bold;}
 .height{border-bottom:2px solid red;background-color:#ffffff!important;
