--- a/index2.html
+++ b/index2.html
@@ -132,7 +132,7 @@ aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle 
 </div>
 </div>
 <script src="js/bootstrap.min.js"></script>
-
+<h3>thank you</h3>
 </body>
 
 
