--- a/index2.html
+++ b/index2.html
@@ -134,9 +134,7 @@ aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle 
 
 <div  class="container text-center">
 MY Some Website link:
-<a href="sabbirfahim12.github.io/Hot-gadgets/index.html">Website
-LINK</a>
-
+<a href="https://sabbirfahim12.github.io/Hot-gadgets/">Website Link</a>
 
 </div>
 <script src="js/bootstrap.min.js"></script>
