--- a/index2.html
+++ b/index2.html
@@ -134,7 +134,8 @@ aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle 
 
 <div  class="container text-center">
 MY Some Website link:
-<a href="https://sabbirfahim12.github.io/Hot-gadgets/">Website Link</a>
+<a href="https://sabbirfahim12.github.io/Hot-gadgets/">
+  Website Link</a>
 
 </div>
 <script src="js/bootstrap.min.js"></script>
